# scd

./: Cargo.toml  LICENSE  README.md  fish-side.fish  kitty.fish  open-methods.toml  open-methods.yml
src/: app.rs  draw.rs  event.rs  file_manager.rs  fish.rs  handlers.rs  icons.rs  keybindings.rs  main.rs  shell.rs  status_bar.rs  system_monitor.rs  task.rs  task_manager.rs
src/file_manager/: mod.rs  shell.rs
src/shell/: mod.rs  scd.fish  scd.nu  scd.zsh
src/tests/: app.rs  handlers.rs  mod.rs
src/widgets/: mod.rs  sysmon.rs
src/widgets/file_manager/: icons.rs  mod.rs  shell.rs
