[package]
name = "scd"
version = "0.1.0"
authors = ["Chen Shuaimin <chen_shuaimin@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
tui = "0.9.1"
termion = "1.5.5"
structopt = "0.3.14"
serde = { version = "1.0.106", features = ["derive"] }
serde_yaml = "0.8.11"
sysinfo = "0.14.1"
notify = "5.0.0-pre.2"
crossbeam-channel = "0.4.2"
nix = "0.17.0"
