[package]
name = "scd"
version = "0.1.3"
edition = "2018"
authors = ["Chen Shuaimin <chen_shuaimin@outlook.com>"]
description = "A tiny file manager focused on shell integration"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/cshuaimin/scd"
repository = "https://github.com/cshuaimin/scd"
keywords = ["cli", "file-manager"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
tui = "0.9.1"
termion = "1.5.5"
structopt = "0.3.14"
serde = { version = "1.0.106", features = ["derive"] }
serde_yaml = "0.8.11"
sysinfo = "0.14.1"
notify = "=5.0.0-pre.2"
crossbeam-channel = "0.4.2"
nix = "0.17.0"
strmode = "1.0.0"
regex = "1.3.7"
once_cell = "1.4.0"
unicode-width = "0.1.7"

[dev-dependencies]
tempfile = "3.1.0"
